software/components/airflow/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: airflow
  labels:
    hostk8s.component: airflow
    hostk8s.type: workflow-orchestrator
